--- a/project.html
+++ b/project.html
@@ -15,6 +15,7 @@ order: 2
                     <h3>G-Spot</h3>
                     <p>Website for <b>gold,silver and copper</b></p>
                     <a href="https://mitaka1210.github.io/Template-1/">Check</a>
+                    <a href="https://github.com/mitaka1210/Template-1">Code</a>
                 </div>
             </div>
         </div>
@@ -26,8 +27,9 @@ order: 2
             <div class="content">
                 <div>
                     <h3>D-r V.Vulcheva</h3>
-                    <p>Website for <b>dental medicine</b></p>
+                    <p>Website for <b>dental medicine(Waiting images and content)</b></p>
                     <a href="https://mitaka1210.github.io/myPF/">Check</a>
+                    <a href="https://github.com/mitaka1210/myPF">Code</a>
                 </div>
             </div>
         </div>
@@ -44,4 +46,15 @@ order: 2
                 </div>
             </div>
         </div>
+        <div class="card">
+            <div class="imgBx bgr-4" data-text="Portfolio">
+                <img src="{{ site.baseurl }}/images/portf.jpg">
+            </div>
+            <div class="content">
+                <div>
+                    <h3>eng.Dimitar Dimitrov</h3>
+                    <p>Information for <b>Me</b> built with HTML CSS JS and more</p>
+                    <a href="https://github.com/mitaka1210/Portfolio-ENG">Code</a>
+                </div>
+            </div>
     </div>
