add PWA project

--- a/project.html
+++ b/project.html
@@ -8,7 +8,7 @@ order: 2
     <div id="project" class="container2">
         <div class="card">
             <div class="imgBx bgr-1" data-text="G-Spot">
-                <img src="{{ site.baseurl }}/images/kitchen-2165756.jpg">
+                <img class="card-images" src="{{ site.baseurl }}/images/g-spot.jpg">
             </div>
             <div class="content">
                 <div>
@@ -22,12 +22,12 @@ order: 2
 
         <div class="card">
             <div class="imgBx bgr-2" data-text="D-r V.Vulcheva">
-                <img src="{{site.baseurl}}/images/h-shaw-Dqrlp6cMLkE-unsplash.jpg">
+                <img class="card-images" src="{{site.baseurl}}/images/h-shaw-Dqrlp6cMLkE-unsplash.jpg">
             </div>
             <div class="content">
                 <div>
                     <h3>D-r V.Vulcheva</h3>
-                    <p>Website for <b>dental medicine(Waiting images and content)</b></p>
+                    <p>Website for <b>dental medicine</b></p>
                     <a href="https://mitaka1210.github.io/myPF/">Check</a>
                     <a href="https://github.com/mitaka1210/myPF">Code</a>
                 </div>
@@ -36,7 +36,7 @@ order: 2
 
         <div class="card">
             <div class="imgBx bgr-3" data-text="kontofiscal">
-                <img src="{{site.baseurl}}/images/kelly-sikkema-3-Tc_5LROrM-unsplash.jpg">
+                <img class="card-images" src="{{site.baseurl}}/images/kelly-sikkema-3-Tc_5LROrM-unsplash.jpg">
             </div>
             <div class="content">
                 <div>
@@ -46,9 +46,10 @@ order: 2
                 </div>
             </div>
         </div>
+
         <div class="card">
             <div class="imgBx bgr-4" data-text="Portfolio">
-                <img src="{{ site.baseurl }}/images/portf.jpg">
+                <img class="card-images" src="{{ site.baseurl }}/images/portf.jpg">
             </div>
             <div class="content">
                 <div>
@@ -57,4 +58,20 @@ order: 2
                     <a href="https://github.com/mitaka1210/Portfolio-ENG">Code</a>
                 </div>
             </div>
+        </div>
+
+        <div class="card">
+            <div class="imgBx bgr-5" data-text="PWA">
+                <img class="card-images" src="{{ site.baseurl }}/images/weather.jpg">
+            </div>
+            <div class="content">
+                <div>
+                    <h3>eng.Dimitar Dimitrov</h3>
+                    <p>Progressive <b>Weather App</b> built with ReactJS HTML CSS JS and more</p>
+                    <a href="https://modest-bhaskara-2925a7.netlify.app/">Check</a>
+                    <a href="https://github.com/mitaka1210/PWA">Code</a>
+                </div>
+            </div>
+        </div>
+
     </div>
