--- a/index.html
+++ b/index.html
@@ -104,13 +104,14 @@ order: 1
     <div class="me">
         <section class="btn">
            
-        <a class="btn-1" href="{{ site.baseurl }}./pdf/eng.Dimitar Dimitrov.pdf" download="eng.Dimitar Dimitrov.pdf" >
+        <a class="btn-1" href="{{ site.baseurl }}/pdf/eng.Dimitar Dimitrov.pdf" download="eng.Dimitar Dimitrov.pdf" >
             <span></span>
             <span></span>
             <span></span>
             <span></span>
             <span></span>
-            CV
+            <span class="text__CV">CV</span>
+           
         </a>
         </section>
     </div>
