--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@ order: 2
                 <img class="card-images" src="{{ site.baseurl }}/images/g-spot.jpg">
             </div>
             <div class="content">
-                <div>
+                <div class="content-Text">
                     <h3>G-Spot</h3>
                     <p>Website for <b>gold,silver and copper</b></p>
                     <a href="https://mitaka1210.github.io/Template-1/">Check</a>
@@ -25,7 +25,7 @@ order: 2
                 <img class="card-images" src="{{site.baseurl}}/images/h-shaw-Dqrlp6cMLkE-unsplash.jpg">
             </div>
             <div class="content">
-                <div>
+                <div class="content-Text">
                     <h3>D-r V.Vulcheva</h3>
                     <p>Website for <b>dental medicine build ReactJS</b></p>
                     <a href="https://mitaka1210.github.io/React-DR-wesbite/">Check</a>
@@ -39,7 +39,7 @@ order: 2
                 <img class="card-images" src="{{site.baseurl}}/images/kelly-sikkema-3-Tc_5LROrM-unsplash.jpg">
             </div>
             <div class="content">
-                <div>
+                <div class="content-Text">
                     <h3>kontofiscal</h3>
                     <p>Website for <b>accounting services</b> built with Wordpress</p>
                     <a href="http://kontofiscal.com/">Check</a>
@@ -52,7 +52,7 @@ order: 2
                 <img class="card-images" src="{{ site.baseurl }}/images/portf.jpg">
             </div>
             <div class="content">
-                <div>
+                <div class="content-Text">
                     <h3>eng.Dimitar Dimitrov</h3>
                     <p>Information for <b>Me</b> built with HTML CSS JS and more</p>
                     <a href="https://github.com/mitaka1210/Portfolio-ENG">Code</a>
@@ -65,8 +65,9 @@ order: 2
                 <img class="card-images" src="{{ site.baseurl }}/images/weather.jpg">
             </div>
             <div class="content">
-                <div>
-                    <h3>Check the Weather</h3>
+                <div class="content-Text">
+                    <h3>Check the Weather </h3>
+                    <p><b>write city or capital</b></p>
                     <p>Progressive <b>Weather App</b> built with ReactJS and more</p>
                     <a href="https://modest-bhaskara-2925a7.netlify.app/">Check</a>
                     <a href="https://github.com/mitaka1210/PWA">Code</a>
