--- a/project.html
+++ b/project.html
@@ -74,5 +74,19 @@ order: 2
                 </div>
             </div>
         </div>
+        <div class="card">
+            <div class="imgBx bgr-6" data-text="CV">
+                <img class="card-images" src="{{ site.baseurl }}/images/webdev.jpg">
+            </div>
+            <div class="content">
+                <div class="content-Text">
+                    <h3>Information For Me </h3>
+                    <p><b>You can ask Me for more</b></p>
+                    <p><b>CV</b> built with HTML,Jquery,SCSS and more</p>
+                    <a href="https://mitaka1210.github.io/CV/">Check</a>
+                    <a href="https://github.com/mitaka1210/CV">Code</a>
+                </div>
+            </div>
+        </div>
 
     </div>
