--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ order: 1
                             <circle cx="70" cy="70" r="70"></circle>
                         </svg>
                         <div class="number">
-                            <h3>75<span>%</span></s>
+                            <h3>HTML<span>!</span></s>
                             </h3>
                         </div>
                     </div>
@@ -59,7 +59,7 @@ order: 1
                             <circle cx="70" cy="70" r="70"></circle>
                         </svg>
                         <div class="number">
-                            <h3>65<span>%</span></s>
+                            <h3>CSS<span>!</span></s>
                             </h3>
                         </div>
                     </div>
@@ -75,7 +75,7 @@ order: 1
                             <circle cx="70" cy="70" r="70"></circle>
                         </svg>
                         <div class="number">
-                            <h3>60<span>%</span></s>
+                            <h3>JS<span>!</span></s>
                             </h3>
                         </div>
                     </div>
@@ -91,7 +91,7 @@ order: 1
                             <circle cx="70" cy="70" r="70"></circle>
                         </svg>
                         <div class="number">
-                            <h3>30<span>%</span></s>
+                            <h3>ReactJS<span>!</span></s>
                             </h3>
                         </div>
                     </div>
