--- a/project.html
+++ b/project.html
@@ -83,8 +83,8 @@ order: 2
                     <h3>Information For Me </h3>
                     <p><b>You can ask Me for more</b></p>
                     <p><b>CV</b> built with HTML,Jquery,SCSS and more</p>
-                    <a href="https://mitaka1210.github.io/CV/">Check</a>
-                    <a href="https://github.com/mitaka1210/CV">Code</a>
+                    <a href="https://mitaka1210.github.io/Personal-Portfolio--2/">Check</a>
+                    <a href="https://github.com/mitaka1210/Personal-Portfolio--2">Code</a>
                 </div>
             </div>
         </div>
