--- a/project.html
+++ b/project.html
@@ -174,7 +174,7 @@ order: 2
         </div>
         <div class="card">
             <div class="imgBx bgr-13" data-text="E-commerce">
-                <img class="card-images" src="{{ site.baseurl }}/images/E-commerce.jpg">
+                <img class="card-images" src="{{ site.baseurl }}/images/e-commerce.jpg">
             </div>
             <div class="content">
                 <div class="content-Text">
